--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 				</div>
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+						<img src="./images/computing-confused.gif" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
@@ -133,7 +133,7 @@
 				</div>
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+						<img src="./images/eventrsvp.gif" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
@@ -153,7 +153,7 @@
 				</div>
 				<div class="single-book">
 					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+						<img src="./images/matrixclip.gif" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
