--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 			<h2 class="universal-h2 universal-h2-bckg">Projects and Projects</h2>
 			<div class="books">
 				<div class="single-book">
-					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+					<a href="https://github.com/itsJeetJayas7/Django_blogg" class="single-book__img">
+						<img src="./images/8poNkRcUKw0y.gif" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
@@ -132,7 +132,7 @@
 					<p>Python, Pandas, MatPlotLib, Numpy, Naive Black-Scholes, SQL, R</p>
 				</div>
 				<div class="single-book">
-					<a href="#" class="single-book__img">
+					<a href="https://github.com/itsJeetJayas7/Event_RSVP" class="single-book__img">
 						<img src="./images/eventrsvp.gif" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
@@ -142,8 +142,8 @@
 					<p>C, SQLite, GTK+</p>
 				</div>
 				<div class="single-book">
-					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+					<a href="https://github.com/itsJeetJayas7/System-Monitor" class="single-book__img">
+						<img src="./images/Screenshot%202024-08-31%20at%201.12.15%E2%80%AFAM.png" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
@@ -152,7 +152,7 @@
 					<p>C, Subshells, Job Control, Signal Handling, GTK+</p>
 				</div>
 				<div class="single-book">
-					<a href="#" class="single-book__img">
+					<a href="https://github.com/itsJeetJayas7/MyShell" class="single-book__img">
 						<img src="./images/matrixclip.gif" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
@@ -162,8 +162,8 @@
 					<p>C, Subshells, Job Control, Signal Handling</p>
 				</div>
 				<div class="single-book">
-					<a href="#" class="single-book__img">
-						<img src="./images/books-1.jpg" alt="single book and cd">
+					<a href="https://github.com/itsJeetJayas7/Student-Grading-BrightSpace-2.0-" class="single-book__img">
+						<img src="./images/pic1.png" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
