--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 			<div class="books">
 				<div class="single-book">
 					<a href="https://github.com/itsJeetJayas7/Django_blogg" class="single-book__img">
-						<img src="./images/8poNkRcUKw0y.gif" alt="single book and cd" style="width: 245px; height: 215px;">
+						<img src="./images/Screenshot%202024-09-02%20at%207.10.03%E2%80%AFPM.png" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
