--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 				</div>
 				<div class="single-book">
 					<a href="https://github.com/itsJeetJayas7/System-Monitor" class="single-book__img">
-						<img src="./images/Screenshot%202024-08-31%20at%201.12.15%E2%80%AFAM.png" alt="single book and cd" style="width: 245px; height: 215px;">
+						<img src="./images/Screenshot%202024-09-04%20at%202.57.47%E2%80%AFPM.png" alt="single book and cd" style="width: 245px; height: 215px;">
 						<div class="single-book_download">
 							<img src="./images/download.svg" alt="book image">
 						</div>
